# dare

./: .gitignore  CMakeLists.txt  DaReConfig.cmake.in  Dockerfile  Doxyfile  DoxygenWarnings.txt  LICENSE  README.md  main.cpp  update_license_year.sh
.github/workflows/: analysis.yml  build.yml  cmake-single-platform.yml  test.yml
AnalyticalSolutions/: CMakeLists.txt  Diffusion.h
Data/: CMakeLists.txt  DefaultTypes.h  Field.h  Field.inl  GridVector.h  GridVector.inl  Stencil.h  Stencil.inl  Stencils_Cartesian.h  Stencils_Cartesian.inl
Data/test/: CMakeLists.txt  test_GridVector.cpp  test_Stencil.cpp
Equations/: CMakeLists.txt  DDT.h  DDT.inl  Divergence_Cartesian.inl  FluxLimiter.h  Gradient_Cartesian.inl  Operators.h  TVD_Cartesian.h  TimeDiscretizationSchemes.h
Equations/test/: CMakeLists.txt  test_Cartesian_Operators.cpp  test_DDT.cpp
FileFormats/: CMakeLists.txt  STL.h  STL.inl  XML.cpp  XML.h
Grid/: CMakeLists.txt  Cartesian.cpp  Cartesian.h  Cartesian.inl  CartesianDistribution.h  CartesianRepresentation.h  CartesianRepresentation.inl  DefaultTypes.h
Grid/Cartesian/: CMakeLists.txt  Cartesian.cpp  CartesianDistribution.h  CartesianMesh.h  CartesianMesh.inl  CartesianRepresentation.h  CartesianRepresentation.inl  Divergence_Cartesian.h  Divergence_Cartesian.inl  Gradient_Cartesian.h  Interpolation_Cartesian.h  MatrixBlock_Cartesian.h  MatrixBlock_Cartesian.inl  Operators_Cartesian.h  Stencils_Cartesian.h  Stencils_Cartesian.inl  TVD_Cartesian.h  TVD_Cartesian.inl  VTKOptions_Cartesian.h
Grid/test/: CMakeLists.txt  test_CartesianDistribution_Cubical.cpp  test_CartesianDistribution_MPI_Dim_create.cpp  test_Cartesian_Operators.cpp  test_CubicalCartesianDistribution.cpp  test_DistributionFunctions.h  test_integration_Cartesian_Interpolation.cpp
IO/: CMakeLists.txt  FileSystemManager.cpp  FileSystemManager.h  FileSystemOperations.cpp  FileSystemOperations.h  IODefaults.h  VTKOptions.h  VTKOptions_Cartesian.h  VTKPXMLStructuredGridWriter.cpp  VTKPXMLStructuredGridWriter.h  VTKTypes.h  VTKWriter.cpp  VTKWriter.h  VTKWriter.inl
IO/test/: CMakeLists.txt  test_VTKWriter.cpp
MPI/: CMakeLists.txt  ExecutionManager.cpp  ExecutionManager.h  ExecutionManager.inl  ExecutionManager_MPI.inl  HaloBuffer.h  HaloBuffer.inl  MPITypeConverter.h  OBlackHoleStream.h  SingleHaloBuffer.h  SingleHaloBuffer.inl
MPI/test/: CMakeLists.txt  TestField.h  test_HaloBuffer.cpp  test_SingleHaloBuffer.cpp
Math/: CMakeLists.txt  Divisors.h  Interpolation.h  Interpolation_Cartesian.h  Pow.h  Random.h
Math/test/: CMakeLists.txt  test_integration_Cartesian_Interpolation.cpp  test_mathtools.cpp
MatrixSystem/: BiCGStab2.h  BiCGStab2.inl  CMakeLists.txt  FluxLimiter.h  MatrixBlock.h  MatrixBlock.inl  MatrixBlockBase.h  MatrixBlockBase.inl  MatrixBlock_Cartesian.h  MatrixBlock_Cartesian.inl  MatrixBlock_Default.h  MatrixBlock_Default.inl  Operators.h  Operators_Cartesian.h  Operators_Cartesian.inl  Stencils_Cartesian.h  Stencils_Cartesian.inl  Trilinos.h  Trilinos.inl  TrilinosSolver.h  TrilinosSolver.inl
MatrixSystem/test/: CMakeLists.txt  test_MatrixBlock.cpp  test_MatrixBlockBase.cpp  test_Trilinos.cpp  test_TrilinosSolver.cpp  test_TrilinosTestGrid.h
ScopeGuard/: CMakeLists.txt  ScopeGuard.cpp  ScopeGuard.h
ScopeGuard/test/: CMakeLists.txt  test.cpp
Utilities/: Array.h  Array.inl  CMakeLists.txt  Errors.h  Hashes.h  InitializationTracker.h  Utils_Hashes.h  Utils_Vector.h  Utils_Vector.inl  Vector.h  Vector.inl  Vector_traits.h
test/: CMakeLists.txt  MPIEnvironment.h  main_test.cpp  test.cpp  test_integration_Cartesian_Field.cpp  test_integration_Cartesian_GridVector.cpp  test_integration_Cartesian_MatrixBlock.cpp  test_integration_Cartesian_Operators.cpp  test_integration_Cartesian_Stencils.cpp  test_integration_Cartesian_Trilinos.cpp
test/Verification/: advection_periodic1D.cpp  advection_periodic2D.cpp  counter_diffusion.cpp  counter_diffusion1D.cpp  counter_diffusion2D.cpp
